[gd_scene load_steps=13 format=3 uid="uid://6cci7uoxjsx4"]

[ext_resource type="Script" path="res://Evade/VideoCapture.gd" id="1_xdi74"]
[ext_resource type="Script" path="res://Evade/FaceDraw.gd" id="2_q3e5s"]
[ext_resource type="Script" path="res://Evade/Spawner.gd" id="3_4ncta"]
[ext_resource type="Script" path="res://Evade/Player.gd" id="3_r121i"]
[ext_resource type="Texture2D" uid="uid://dhc53rbfq7dyb" path="res://Evade/Sprites/Wall.svg" id="5_hv7n2"]
[ext_resource type="Texture2D" uid="uid://d2tbu5t1mkyqf" path="res://Evade/Sprites/Heart.svg" id="5_rjhhg"]

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_mxodk"]
blend_mode = 3
light_mode = 1

[sub_resource type="Gradient" id="Gradient_adxfn"]
offsets = PackedFloat32Array(1)
colors = PackedColorArray(0.355, 0.71, 0.366833, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_algr8"]
gradient = SubResource("Gradient_adxfn")
width = 1212
height = 744

[sub_resource type="CircleShape2D" id="CircleShape2D_ofjv2"]
radius = 50.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5ithc"]
size = Vector2(128, 128)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_s58wh"]
size = Vector2(1172, 113)

[node name="Node" type="Node"]

[node name="Face" type="SubViewport" parent="."]
transparent_bg = true

[node name="Drawer" type="Node2D" parent="Face"]
script = ExtResource("2_q3e5s")

[node name="HUD" type="Control" parent="."]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_xdi74")

[node name="VideoFeed" type="TextureRect" parent="HUD"]
unique_name_in_owner = true
z_index = -20
material = SubResource("CanvasItemMaterial_mxodk")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
expand_mode = 2
stretch_mode = 5

[node name="Interface" type="VBoxContainer" parent="HUD"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -40.0
offset_bottom = 40.0
grow_horizontal = 0

[node name="Open" type="Button" parent="HUD/Interface"]
layout_mode = 2
text = "Open"

[node name="Release" type="Button" parent="HUD/Interface"]
layout_mode = 2
text = "Release"

[node name="Reset" type="Button" parent="HUD/Interface"]
layout_mode = 2
text = "Reset face position"

[node name="Panel" type="Panel" parent="HUD/Interface"]
custom_minimum_size = Vector2(0, 39.015)
layout_mode = 2

[node name="Video feed" type="CheckBox" parent="HUD/Interface/Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -77.5
offset_top = -15.5
offset_right = 77.5
offset_bottom = 15.5
grow_horizontal = 2
grow_vertical = 2
button_pressed = true
text = "Video feed"

[node name="Fail" type="Panel" parent="HUD"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -100.0
offset_right = 200.0
offset_bottom = 100.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="HUD/Fail"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -32.5
offset_top = -40.0
offset_right = 32.5
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="Restart" type="Button" parent="HUD/Fail/MarginContainer"]
layout_mode = 2
text = "Restart"

[node name="MarginContainer2" type="MarginContainer" parent="HUD/Fail"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -191.0
offset_right = 191.0
offset_bottom = 69.0
grow_horizontal = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="EndLabel" type="Label" parent="HUD/Fail/MarginContainer2"]
layout_mode = 2
text = "You were hit too many times, you survived for XXX .
Can you do better?"
horizontal_alignment = 1
autowrap_mode = 3

[node name="Map" type="Node2D" parent="."]
z_index = -10

[node name="BackGround" type="Sprite2D" parent="Map"]
z_index = -100
position = Vector2(586, 307)
texture = SubResource("GradientTexture2D_algr8")

[node name="Spawner" type="Node2D" parent="Map"]
script = ExtResource("3_4ncta")

[node name="Timer" type="Timer" parent="Map/Spawner"]
wait_time = 0.6
autostart = true

[node name="Marker1" type="Marker2D" parent="Map/Spawner"]
position = Vector2(126, -50)

[node name="Marker2" type="Marker2D" parent="Map/Spawner"]
position = Vector2(996, -50)

[node name="Player" type="RigidBody2D" parent="Map"]
position = Vector2(575, 560)
mass = 100.0
gravity_scale = 0.0
angular_damp = 1e+07
script = ExtResource("3_r121i")

[node name="Sprite2D" type="Sprite2D" parent="Map/Player"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Map/Player"]
shape = SubResource("CircleShape2D_ofjv2")

[node name="Heart1" type="Sprite2D" parent="Map/Player"]
position = Vector2(-76, 53)
scale = Vector2(0.1, 0.1)
texture = ExtResource("5_rjhhg")

[node name="Heart2" type="Sprite2D" parent="Map/Player"]
position = Vector2(76, 53)
scale = Vector2(0.1, 0.1)
texture = ExtResource("5_rjhhg")

[node name="Wall" type="StaticBody2D" parent="Map"]
position = Vector2(63, 575)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Map/Wall"]
position = Vector2(-0.5, 0)
shape = SubResource("RectangleShape2D_5ithc")

[node name="Sprite2D" type="Sprite2D" parent="Map/Wall"]
scale = Vector2(0.24, 0.24)
texture = ExtResource("5_hv7n2")

[node name="Wall2" type="StaticBody2D" parent="Map"]
position = Vector2(1085, 575)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Map/Wall2"]
position = Vector2(-0.5, 0)
shape = SubResource("RectangleShape2D_5ithc")

[node name="Sprite2D" type="Sprite2D" parent="Map/Wall2"]
scale = Vector2(0.25, 0.25)
texture = ExtResource("5_hv7n2")

[node name="Wall3" type="StaticBody2D" parent="Map"]
position = Vector2(1085, 747)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Map/Wall3"]
position = Vector2(-504, 46.5)
shape = SubResource("RectangleShape2D_s58wh")

[connection signal="pressed" from="HUD/Interface/Open" to="HUD" method="_on_open_pressed"]
[connection signal="pressed" from="HUD/Interface/Release" to="HUD" method="_on_release_pressed"]
[connection signal="pressed" from="HUD/Interface/Reset" to="HUD" method="_on_reset_pressed"]
[connection signal="pressed" from="HUD/Interface/Panel/Video feed" to="HUD" method="_on_video_feed_pressed"]
[connection signal="pressed" from="HUD/Fail/MarginContainer/Restart" to="HUD" method="_on_restart_pressed"]
[connection signal="timeout" from="Map/Spawner/Timer" to="Map/Spawner" method="_on_timer_timeout"]
